@@ -1,3 +1,2 @@
 debian/schooltool-client.1
-debian/wxschooltool.1
 debian/import-sampleschool.1
